AC_INIT(main.c)
CONFIG_RULES
AC_PROG_INSTALL
AC_HEADER_CHECK(termios.h,AC_FUNC_CHECK([tcsetattr],AC_DEFINE(POSIX_TERMIOS)))
AC_CHECK_HEADERS(syslog.h stdarg.h sys/select.h)
AC_CHECK_FUNCS(openlog syslog closelog strftime vsprintf)
AC_PROG_AWK
HAS_ANSI_VOLATILE
dnl
dnl --with-vague-errors disables useful error messages.
dnl
AC_ARG_WITH([vague-errors],
[  --with-vague-errors		Do not supply helpful error messages to clients
  --without-vague-errors	Supply helpful error messages to clients (default)],
,
withval=no)dnl
if test "$withval" = yes; then
	AC_MSG_RESULT(Supplying vague error messages to KDC clients)
	AC_DEFINE(KRBCONF_VAGUE_ERRORS)
fi
dnl
dnl --with-kdc-kdb-update makes the KDC update the database with last request
dnl information and failure information.
dnl
AC_ARG_WITH([kdc-kdb-update],
[  --with-kdc-kdb-update	Update the database
  --without-kdc-kdb-update	Do not update the database (default)],
,
withval=no)dnl
if test "$withval" = yes; then
	AC_MSG_RESULT(Updating KDC database with each request)
	AC_DEFINE(KRBCONF_KDC_MODIFIES_KDB)
fi
dnl

KRB5_BUILD_PROGRAM
V5_AC_OUTPUT_MAKEFILE
