AC_INIT(krb524d.c)
CONFIG_RULES
AC_PROG_ARCHIVE
AC_PROG_ARCHIVE_ADD
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_AWK
AC_TYPE_SIGNAL
USE_KADMSRV_LIBRARY
USE_GSSRPC_LIBRARY
USE_GSSAPI_LIBRARY
USE_DYN_LIBRARY
USE_DB_LIBRARY
USE_KDB5_LIBRARY
USE_KRB4_LIBRARY
KRB5_LIBRARIES
V5_USE_SHARED_LIB
AC_CHECK_HEADERS(sys/select.h) dnl
V5_AC_OUTPUT_MAKEFILE
