AC_INIT(configure.in)
CONFIG_RULES
if test $krb5_cv_build_krb4_libs = yes ; then
	AC_MSG_RESULT(building Kerberos 4 libraries)
	AC_ARG_WITH([kdb4],
	[  --with-kdb4		use Kerberos version 4 database library.
	  --without-kdb4	Avoid using Kerberos version 4 database library.],
	,
	withval=no)dnl
	if test "$withval" = no; then
		kdb4=
	else
		kdb4=kdb4
	fi
	krb4=krb4
else
	AC_MSG_RESULT(skipping Kerberos 4 libraries)
	kdb4=
	krb4=
fi
CONFIG_DIRS(crypto des425 $kdb4 $krb4 krb5 kdb gssapi kadm)
AC_PROG_ARCHIVE
AC_PROG_RANLIB
DO_SUBDIRS
V5_AC_OUTPUT_MAKEFILE
