AC_INIT(configure.in)
CONFIG_RULES
if test $krb5_cv_build_krb4_libs = yes ; then
	AC_MSG_RESULT(building Kerberos 4 libraries)
	krb4=krb4
else
	AC_MSG_RESULT(skipping Kerberos 4 libraries)
	krb4=
fi
AC_CONFIG_SUBDIRS(crypto krb5 des425 $krb4 krb5util kdb gssapi rpc kadm5)
AC_PROG_ARCHIVE
AC_PROG_RANLIB
V5_AC_OUTPUT_MAKEFILE
