AC_INIT(configure.in)
CONFIG_RULES
KRB5_RUN_FLAGS
KRB5_BUILD_PROGRAM
AC_HEADER_STDC
AC_CHECK_FUNCS(strchr)
AC_CHECK_HEADERS(unistd.h stdlib.h sys/param.h sys/socket.h)
AC_CONST
AC_PROG_INSTALL
AC_CHECK_PROG(RUNTEST,runtest,runtest)
AC_RETSIGTYPE
CHECK_SIGNALS
K5_GEN_MAKEFILE(.)
K5_GEN_MAKEFILE(resolve)
K5_GEN_MAKEFILE(asn.1)
K5_GEN_MAKEFILE(create)
K5_GEN_MAKEFILE(hammer)
K5_GEN_MAKEFILE(verify)
K5_GEN_MAKEFILE(gssapi)
K5_GEN_MAKEFILE(dejagnu)
K5_OUTPUT_FILES

