AC_INIT(configure.in)
CONFIG_RULES
KRB5_RUN_FLAGS
KRB5_BUILD_PROGRAM
AC_CANONICAL_HOST
AC_HEADER_STDC
AC_CHECK_FUNCS(strchr)
AC_CHECK_HEADERS(unistd.h stdlib.h sys/param.h sys/socket.h)
AC_C_CONST
AC_PROG_INSTALL
AC_CHECK_PROG(RUNTEST,runtest,runtest)
if test "$RUNTEST" != ""; then
	HAVE_RUNTEST=no
else
	HAVE_RUNTEST=yes
fi
AC_SUBST(HAVE_RUNTEST)
AC_TYPE_SIGNAL
CHECK_SIGNALS
if test "$KRB4_LIB" = ''; then
	KRB4_DEJAGNU_TEST="KRBIV=0"
else
	AC_MSG_RESULT(Kerberos 4 testing enabled)
	KRB4_DEJAGNU_TEST="KRBIV=1"
fi
AC_SUBST(KRB4_DEJAGNU_TEST)
K5_GEN_MAKEFILE(.)
K5_GEN_MAKEFILE(resolve)
K5_GEN_MAKEFILE(asn.1)
K5_GEN_MAKEFILE(create)
K5_GEN_MAKEFILE(hammer)
K5_GEN_MAKEFILE(verify)
K5_GEN_MAKEFILE(gssapi)
K5_GEN_MAKEFILE(dejagnu)
K5_OUTPUT_FILES
dnl AC_OUTPUT to keep autoreconf happy
