AC_INIT(configure.in)
CONFIG_RULES
AC_PROG_ARCHIVE
AC_PROG_ARCHIVE_ADD
if test $krb5_cv_prog_gcc = yes ; then
     HAVE_GCC=yes
     else HAVE_GCC=
fi

AC_SUBST(HAVE_GCC)
HOST_TYPE=$krb5_cv_host
AC_SUBST(HOST_TYPE)
case $HOST_TYPE in
*-*-aix*)
       AppendRule(all::aix.bincmds)
        ;;
esac
SHLIB_TAIL_COMP=$krb5_cv_shlibs_tail_comp
AC_SUBST(SHLIB_TAIL_COMP)
CONFIG_DIRS(et ss profile berk_db pty)
DO_SUBDIRS
V5_AC_OUTPUT_MAKEFILE
