AC_INIT(kdb5_edit.c)
CONFIG_RULES
AC_PROG_INSTALL
AC_PROG_YACC
AC_HAVE_HEADERS(unistd.h sys/timeb.h alloca.h)
AC_HAVE_FUNCS(ftime timezone)
AC_CONST
AC_HEADER_STDC
AC_CHECK_LIB(ndbm,main)
AC_CHECK_LIB(dbm,main)
AC_HAVE_FUNCS(getcwd)
SS_RULES
USE_KDB5_LIBRARY
USE_KDB4_LIBRARY
USE_KRB4_LIBRARY
USE_SS_LIBRARY
KRB5_LIBRARIES
V5_USE_SHARED_LIB
V5_AC_OUTPUT_MAKEFILE
